--- a/index.html
+++ b/index.html
@@ -1,283 +1,116 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Inter", sans-serif;
-        margin: 0;
-        background: #f9fafb;
-        color: #1f2937;
-        line-height: 1.6;
-      }
-
-      header {
-        background: #0f172a;
-        color: white;
-        text-align: center;
-        padding: 3rem 1rem;
-      }
-
-      header h1 {
-        margin: 0;
-        font-size: 2.5rem;
-      }
-
-      header img {
-        width: 140px;
-        height: 140px;
-        object-fit: cover;
-        border-radius: 50%;
-        margin-top: 1rem;
-        border: 3px solid white;
-      }
-
-      section {
-        padding: 2rem 1rem;
-        max-width: 800px;
-        margin: auto;
-      }
-
-      h2 {
-        color: #0f172a;
-        border-bottom: 2px solid #e2e8f0;
-        padding-bottom: 0.5rem;
-        margin-bottom: 1.5rem;
-        font-size: 1.8rem;
-      }
-
-      ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      ul li {
-        margin-bottom: 0.75rem;
-      }
-
-      a {
-        color: #3b82f6;
-        text-decoration: none;
-        font-weight: 500;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 1rem;
-      }
-
-      th,
-      td {
-        border: 1px solid #e5e7eb;
-        padding: 12px;
-        text-align: center;
-      }
-
-      th {
-        background-color: #f1f5f9;
-      }
-
-      form {
-        background: white;
-        padding: 2rem;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-      }
-
-      label {
-        display: block;
-        margin-top: 1rem;
-        font-weight: 600;
-      }
-
-      input,
-      textarea {
-        width: 100%;
-        padding: 0.75rem;
-        margin-top: 0.5rem;
-        border: 1px solid #cbd5e1;
-        border-radius: 4px;
-      }
-
-      input[type="submit"] {
-        background-color: #3b82f6;
-        color: white;
-        font-weight: bold;
-        border: none;
-        margin-top: 1.5rem;
-        padding: 0.75rem;
-        cursor: pointer;
-        transition: background 0.3s ease;
-      }
-
-      input[type="submit"]:hover {
-        background-color: #2563eb;
-      }
-
-      footer {
-        text-align: center;
-        padding: 2rem 1rem;
-        background-color: #f1f5f9;
-        margin-top: 3rem;
-        font-size: 0.9rem;
-        color: #6b7280;
-      }
-
-      @media (max-width: 600px) {
-        header h1 {
-          font-size: 2rem;
-        }
-
-        section {
-          padding: 1.5rem 1rem;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Home page</h1>
-      <img src="images/★.jpg" alt="Profile Photo" />
-    </header>
-
-    <section>
-      <h2>About Us</h2>
-      <p>
-        Hello! We are a group of passionate web developers with a love for
-        front-end design and user experience. We build with purpose and style.
-      </p>
-      <h1>Names:<br>ira kiprop kolil 25/02958</h1>
-      <h1>25/02987 Hamza Yussuf</h1>
-      <h1>24/07047 Sam Kiprop</h1>
-      <h1>23/02370 Joanne Nyokabi</h1>
-      <h1>25/02800 George Macharia</h1>
-    </section>
-
-    <section>
-      <h2>Favorite Websites</h2>
-      <ul>
-        <li>
-          <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
-        </li>
-        <li><a href="https://moviebox.ng" target="_blank">Movie Box</a></li>
-        <li>
-          <a href="https://animixplay.com.mx" target="_blank">Animix Play</a>
-        </li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Top Skills we have:</h2>
-      <table>
-        <tr>
-          <th>Skill</th>
-          <th>Proficiency</th>
-        </tr>
-        <tr>
-          <td>Python</td>
-          <td>Expert</td>
-        </tr>
-        <tr>
-          <td>Django python</td>
-          <td>Advanced</td>
-        </tr>
-        <tr>
-          <td>React Js</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>javascript</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>SQLite & postgress sql</td>
-          <td>Advanced</td>
-        </tr>
-      </table>
-    </section>
-
-    <section>
-      <h2>Contact Me</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input
-          type="text"
-          id="name"
-          placeholder="Your name"
-          class="form-control"
-          required
-        />
-
-        <label for="email" class="mt-3">Email:</label>
-        <input
-          type="email"
-          id="email"
-          placeholder="Your email"
-          class="form-control"
-          required
-        />
-
-        <label for="message" class="mt-3">Message:</label>
-        <textarea
-          id="message"
-          rows="5"
-          placeholder="Tell us sth..."
-          class="form-control"
-          required
-        ></textarea>
-
-        <input
-          type="submit"
-          value="Send Message"
-          class="btn btn-primary mt-3"
-        />
-      </form>
-
-      <!-- Bootstrap Social Media Links -->
-      <div class="text-center mt-4">
-        <p class="mb-2">Connect with us on:</p>
-        <a
-          href="https://www.instagram.com/yourhandle"
-          target="_blank"
-          class="btn btn-outline-danger me-2"
-        >
-          <i class="fab fa-instagram me-1"></i> Instagram
-        </a>
-        <a
-          href="https://www.facebook.com/yourhandle"
-          target="_blank"
-          class="btn btn-outline-primary"
-        >
-          <i class="fab fa-facebook me-1"></i> Facebook
-        </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Group Profiles</title>
+  <!-- bootstrap links -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- custom css -->
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f4f8;
+    }
+    h1, h5 {
+      color: #0f172a;
+    }
+    nav a {
+      font-weight: 500;
+      color: #2563eb;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .card {
+      border: none;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s ease;
+    }
+    .card:hover {
+      transform: scale(1.02);
+    }
+    .card-img-top {
+      height: 250px;
+      object-fit: cover;
+    }
+    .btn-primary {
+      background-color: #2563eb;
+      border-color: #2563eb;
+    }
+    .btn-primary:hover {
+      background-color: #1e40af;
+      border-color: #1e40af;
+    }
+  </style>
+</head>
+<body>
+  <div class="container py-5">
+    <h1 class="text-center mb-4">Group A</h1>
+    <nav class="text-center mb-5">
+        <!-- links to home and contact page -->
+      <a href="index.html" class="me-3">Home</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/★.jpg" class="card-img-top" alt="Ira Photo">
+          <div class="card-body">
+            <h5 class="card-title">Ira Kiprop Kolil</h5>
+            <p class="card-text">REGNO: 25/02958</p>
+            <!-- links to each profile -->
+            <a href="ira-kiprop.html" class="btn btn-primary">View Profile</a>
+          </div>
+        </div>
       </div>
-    </section>
-  </body>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/three.jpeg" class="card-img-top" alt="Hamza Photo">
+          <div class="card-body">
+            <h5 class="card-title">Hamza Yussuf</h5>
+            <p class="card-text">REGNO: 25/02987</p>
+                <!-- links to each profile -->
+            <a href="hamza-yussuf.html" class="btn btn-primary">View Profile</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/two.jpeg" class="card-img-top" alt="Sam Photo">
+          <div class="card-body">
+            <h5 class="card-title">Sam Kiprop</h5>
+            <p class="card-text">REGNO: 24/07047</p>
+                <!-- links to each profile -->
+            <a href="sam-kiprop.html" class="btn btn-primary">View Profile</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/one.jpeg" class="card-img-top" alt="Joanne Photo">
+          <div class="card-body">
+            <h5 class="card-title">Joanne Nyokabi</h5>
+            <p class="card-text">REGNO: 23/02370</p>
+                <!-- links to each profile -->
+            <a href="joanne-nyokabi.html" class="btn btn-primary">View Profile</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/four.jpeg" class="card-img-top" alt="George Photo">
+          <div class="card-body">
+            <h5 class="card-title">George Macharia</h5>
+            <p class="card-text">REGNO: 25/02800</p>
+                <!-- links to each profile -->
+            <a href="george-macharia.html" class="btn btn-primary">View Profile</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
