--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
     </div>
     <!-- footer -->
     <footer>
-      &copy; 2025 Your Website Name. All rights reserved.
+      &copy; 2025 Your group a . All rights reserved.
     </footer>
   </div>
 </body>
